# PyDSAI-Arch-Python

./: .cursorrules  .gitattributes  .gitignore  LICENSE  README.md  README_JP.md  benchmark_report.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: BENCHMARK_RESULTS.md  COMPLEXITY.md  GITHUB_SETUP.md  README_AUDIT.md  RETROSPECTIVE.md
examples/: memory_usage_audit.py  performance_benchmark.py
scripts/: format_and_normalize.py
src/pydsai/: __init__.py  array_list.py  bst.py  deque.py  interfaces.py  linked_list.py  stack.py
tests/: __init__.py  conftest.py  test_array_list.py  test_bst.py  test_deque.py  test_linked_list.py  test_stack.py
