[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydsai"
version = "0.1.0"
description = "Industrial-grade Data Structures & Algorithms Library in Python"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "PyDSAI Contributors"}]
keywords = ["data-structures", "algorithms", "python", "arraylist", "linked-list", "bst"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
Homepage = "https://github.com/gorgeoustrouble10-maker/PyDSAI-Arch-Python"
Repository = "https://github.com/gorgeoustrouble10-maker/PyDSAI-Arch-Python"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
